kubernetes/app/crawlingserver-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawlingserver
  namespace: newtopia-app
  labels:
    app: crawlingserver
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawlingserver
  template:
    metadata:
      labels:
        app: crawlingserver
    spec:
      nodeSelector:
        location: aws
      containers:
      - name: crawlingserver
        image: dudgh614/crawler-app:CI_COMMIT_SHA
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: crawlingserver-service
  namespace: newtopia-app
  labels:
    app: crawlingserver
spec:
  type: ClusterIP
  selector:
    app: crawlingserver
  ports:
  - port: 8080
    targetPort: 8080
    name: http
