kubernetes/app/frontend-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: newtopia-app
  labels:
    app: frontend
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: dudgh614/frontend-app:CI_COMMIT_SHA
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name:  frontend-service
  namespace: newtopia-app
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
